--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,9 +1,8 @@
-            
-            <section>
-                
+<section>
+
     <form id="formData" #userData="ngForm" (ngSubmit)="registerUser(userData.value)">
         <div class="container">
-            <p>Register new user</p>
+            <h1>Register new user</h1>
             <p>Please fill in this form to create an account.</p>
             <hr>
 
@@ -33,7 +32,7 @@
         </div>
 
         <div class="container signin">
-          <p>Already have an account? <a href="/login">Sign in</a>.</p>
+            <p>Already have an account? <a href="/login">Sign in</a>.</p>
         </div>
     </form>
 </section>
