--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,38 +1,36 @@
-<section>
+<!DOCTYPE html>
+<html>
 
-    <form id="formData" #userData="ngForm" (ngSubmit)="registerUser(userData.value)">
-        <div class="container">
-            <h1>Register new user</h1>
-            <p>Please fill in this form to create an account.</p>
-            <hr>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="register.component.css">
+</head>
 
-            <div>
-                <label for="email"><b>First Name</b></label>
-                <input type="text" placeholder="First Name" name="firstname" ngModel>
-            </div>
-            <div>
-                <label for="email"><b>Last Name</b></label>
-                <input type="text" placeholder="Last Name" name="lastname" ngModel>
-            </div>
-            <div>
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" ngModel>
-            </div>
-            <div>
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="password" ngModel>
-            </div>
-            <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
-          <input type="password" placeholder="Repeat Password" name="password" id="psw-repeat" required>
-          <hr> -->
+<body>
+    <div class="register-photo">
+        <div class="form-container">
+            <div class="image-holder"></div>
+            <form id="formData" #userData="ngForm" (ngSubmit)="registerUser(userData.value)" >
+                <h2 class="text-center"><strong>Create</strong> an account.</h2>
+                <div class="form-group"><input class="form-control" type="text" name="firstname" placeholder="First name" ngModel></div>
+                <div class="form-group"><input class="form-control" type="text" name="lastname" placeholder="Last name" ngModel></div>
+                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" ngModel></div>
+                <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" ngModel></div>
+                <div class="form-group">
+                    <div class="form-check"><label class="form-check-label"><input class="form-check-input" type="checkbox">I agree to the license terms.</label></div>
+                </div>
+                <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Sign Up</button></div><a href="/login" class="already">You already have an account? Login here.</a>
+                <!-- <input type="submit" value="Register" class="registerbtn" matButton> -->
+               
 
-            <!-- <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p> -->
-            <!-- <button type="submit" value="Register" class="registerbtn">Register</button> -->
-            <input type="submit" value="Register" class="registerbtn" matButton>
+            </form>
         </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</body>
 
-        <div class="container signin">
-            <p>Already have an account? <a href="/login">Sign in</a>.</p>
-        </div>
-    </form>
-</section>
+</html>
