wa7el fel login help plz

--- a/frontend/src/app/register/register.component.css
+++ b/frontend/src/app/register/register.component.css
@@ -65,7 +65,7 @@ a {
   .register-photo .image-holder {
     display:table-cell;
     width:auto;
-    /* background:url(../../assets/img/meeting.jpg); */
+    background:url(../../../assets/img/meeting.jpg);
     background-size:cover;
   }
   
