--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-//login form.htm
+<!-- //login form.htm
 <!DOCTYPE html>
 <html>
 
@@ -23,7 +23,6 @@
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password" ngModel></div>
             <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In</button></div>
             
-            <!-- <input type="submit" value="Register" class="registerbtn" matButton> -->
 
         </form>
     </div>
@@ -32,4 +31,6 @@
 </body>
 
 
-</html>
+</html> -->
+
+
