create my branche

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -21,6 +21,9 @@
     </div>
   </div>
 </nav>
+<footer>
+  
+</footer>
 <!-- <a  routerLink="/register">Register</a> -->
 <router-outlet></router-outlet>
 
